[package]
name = "buzz"
version = "1.3.0"
edition = "2018"

description = "A simple system tray application for notifying about unseen e-mail"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/buzz"
repository = "https://github.com/jonhoo/buzz.git"

keywords = ["email","cli","systray","notification"]
categories = ["command-line-utilities", "email"]

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
debug=true

[dependencies]
imap = "2.1.2"
native-tls = "0.2.4"
systray = "0.4.0"
mailparse = "0.13.0"
toml = "0.5.6"
notify-rust = "4.0.0-beta.2"
rayon = "1.3.1"
askama_escape = "0.10.1"
chrono = "0.4.13"
directories-next = "1.0.1"
